--- a/IWA_1.1.html
+++ b/IWA_1.1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tally Count</title>
 
-    <link rel="stylesheet" href="/IWA_1.1.css">
+    <link rel="stylesheet" href="css/IWA_1.1.css">
 
     <script src="/IWA_1.1_script.js"></script>
 </head>
