--- a/IWA_1.1.html
+++ b/IWA_1.1.html
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" href="css/IWA_1.1.css">
 
-    <script src="/IWA_1.1_script.js"></script>
+    <!----**DEFER is to link the html to JS**----->
+    <script src="js/IWA_1.1_script.js" defer></script>
 </head>
 
    <body>
@@ -18,7 +19,7 @@
           </h1>
       </header>
 
-        <aside class="controls">
+        <!---<aside class="controls">
                <label>
                    <span>Display</span>
                        <select>
@@ -37,16 +38,15 @@
                </label>
 
                <button>Settings</button>
-        </aside>
+        </aside>--->
 
 
         <main class="counter">
-             <input class="counter_value" readonly 
-                value="1000">
+             <input class="counter_value" data-keys="number" readonly value="0" />
 
              <div class="counter_actions">
-                <button class="counter_button counter_button_first">-</button>
-                <button class="counter_button">+</button>
+                <button data-key="subtract" class="counter_button counter_button_first">-</button>
+                <button data-key="add" class="counter_button">+</button>
              </div>
         </main>
 
