--- a/IWA_1.1.html
+++ b/IWA_1.1.html
@@ -8,8 +8,7 @@
 
     <link rel="stylesheet" href="css/IWA_1.1.css">
 
-    <!----**DEFER is to link the html to JS**----->
-    <script src="js/IWA_1.1_script.js" defer></script>
+    <script src="JS/IWA_1.1.js" defer></script>
 </head>
 
    <body>
