Folder structure changes

--- a/IWA_1/IWA_1.1.html
+++ b/IWA_1/IWA_1.1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tally Count</title>
 
-    <link rel="stylesheet" href="css/IWA_1.1.css">
+    <link rel="stylesheet" href="">
 
     <script src="JS/IWA_1.1.js" defer></script>
 </head>
@@ -41,7 +41,7 @@
 
 
         <main class="counter">
-             <input class="counter_value" data-keys="number" readonly value="0" />
+             <input class="counter_value" data-key="number" readonly value="0" />
 
              <div class="counter_actions">
                 <button data-key="subtract" class="counter_button counter_button_first">-</button>
