--- a/IWA3/Challenge1/IWA_3_Challenge1.html
+++ b/IWA3/Challenge1/IWA_3_Challenge1.html
@@ -1,9 +1,8 @@
-<!--- <script src="script.js\IWA3_Challenge1script.js" defer></script>--->
 <!-- index.html -->
 
 <html>
 	<head>
-		<script src="script.js\IWA3_Challenge1script.js" defer></script>
+		<script src="./IWA_3_Challenge1.html" type="module"></script>
   </head>
 
 	<body>
