--- a/IWA1/IWA_1.1.html
+++ b/IWA1/IWA_1.1.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tally Count</title>
 
-    <link rel="stylesheet" href="css\IWA_1.1.css">
+    <link rel="stylesheet" href="./css/IWA_1.1.css">
 
-    <script src="script.js\IWA_1.1.js" defer></script>
+    <script src="./Javascript/IWA_1.1.js" defer></script>
 </head>
 
    <body>
