--- a/IWA2/Challenge2/IWA_2_Challenge2.html
+++ b/IWA2/Challenge2/IWA_2_Challenge2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="script.js\IWA2_Challenge2script.js" defer></script>
+    <script src="./javascript/IWA2_Challenge2script.js" defer></script>
 </head>
 <body>
     
