--- a/IWA3/Challenge1/IWA_3_Challenge1.html
+++ b/IWA3/Challenge1/IWA_3_Challenge1.html
@@ -1,8 +1,12 @@
-<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 
-<html>
-	<head>
-		<script src="./IWA_3_Challenge1.html" type="module"></script>
+		<script src="./javascript/IWA3_Challenge1script.js" type="module" defer></script>
   </head>
 
 	<body>
@@ -11,10 +15,5 @@
 	</body>
 
 	<footer>Loading...</footer>
-</html>
 
-
-<body>
-    
-</body>
 </html>
