--- a/IWA3/Challenge1/IWA_3_Challenge1.html
+++ b/IWA3/Challenge1/IWA_3_Challenge1.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
-		<script src="./javascript/IWA3_Challenge1script.js" type="module" defer></script>
+		<script src="./javascript/Script.js" type="module" defer></script>
   </head>
 
 	<body>
