--- a/IWA3/Challenge1/IWA3_challenge1.html
+++ b/IWA3/Challenge1/IWA3_challenge1.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
-		<script src="./IWA3_Challange1Script.js" type="module" defer></script>
+	<!--CORS ERROR when running with Chrome. Use live server to test.-->
+	<script src="./Javascript/Script.js" type="module" defer></script>
   </head>
 
 	<body>
