--- a/IWA3/Challenge2/Callenge2.html
+++ b/IWA3/Challenge2/Callenge2.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script scr="./challenge2.js" defer></script>
-    <script scr="./nwabisa_script.js" type="module" defer></script>
-    <script scr="./johannes_script.js" type="module" defer></script>
-    <script scr="./alex_script.js" type="module" defer></script>
-
+    <script src="./JavaScript/challenge2.js" type="module" defer></script>
+    
+    
 </head>
         <body>
             <h1>Our Team</h1>
