Changes to IWA5&Car challenge

--- a/Car_rentalCount_Challenge/Car_rentChallenge.html
+++ b/Car_rentalCount_Challenge/Car_rentChallenge.html
@@ -16,7 +16,7 @@
     <label for="dayAmount"> Enter amount of days you would like to rent a vehicle:</label>
 
     <input type="number" id="dayAmount" name="dayAmount">
-    <button onclick="rentTotal()"> Total: </button>
+    <button onclick="calculateTotalCost()"> Calculate Total: </button>
     
 </body>
 </html>
