--- a/IWA17/Challenge1.html
+++ b/IWA17/Challenge1.html
@@ -7,7 +7,7 @@
         <title>Calendar</title>
 
         <link rel="stylesheet" href="./Chall1Stylesheet.css">
-        <script src="./Cat1.js" defer type="module"></script>
+        <script src="./Challenge1script.js" defer type="module"></script>
 
     </head>
 
