--- a/IWA18/Challenge1.html
+++ b/IWA18/Challenge1.html
@@ -17,8 +17,8 @@
       </div>
     </header>
 
-    <dialog class="overlay" data-help-overlay>
-      <h2 class="overlay__title">Help</h2>
+    <dialog class="overlay" data-help-overlay> <!--data-help-overlay  --used as a custom attribute, and its purpose to uniquely identify this particular dialog element.---->
+      <h2 class="overlay__title">Help</h2>     <!--Overlays are features like pop-up menus,info tags-->
       <p><strong>To use the app, you can start by adding a new order by clicking the "add order" button.</strong></p>
       <p>You can view and update orders by selecting them directly from the list. Inside the order, you can manually change information associated with an order or update its status. However, note that you can quickly change the status of an order by drag it between the three different columns with your mouse.</p>
       <div class="overlay__row">
