--- a/IWA16/Chall1test.html
+++ b/IWA16/Chall1test.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-----------------------------------Cat version------------------------------------------------>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Athletes</title>
-  <script src="./Challenge1script.js" defer type="module"></script>
+  <script src="./OGChall1.js" defer></script> <!--type="module" removed.-->
 </head>
   <body>
     <h1>Athletes</h1>
